--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "start": "node dist/index.js",
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest --coverage",
+        "test:unit": "ENV_FILE=./config/.env.test jest",
         "dev": "tsc-watch --onSuccess \"node dist/index.js\" ",
         "build": "tsc"
     },
@@ -13,14 +14,19 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/jest": "^29.2.2",
         "bcrypt": "^5.1.0",
         "cors": "^2.8.5",
+        "cross-env": "^7.0.3",
         "express": "^4.18.2",
+        "jest": "^29.3.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.7.0",
         "morgan": "^1.10.0",
         "passport": "^0.6.0",
-        "passport-jwt": "^4.0.0"
+        "passport-jwt": "^4.0.0",
+        "supertest": "^6.3.1",
+        "ts-jest": "^29.0.3"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
@@ -31,6 +37,7 @@
         "@types/morgan": "^1.9.3",
         "@types/passport": "^1.0.11",
         "@types/passport-jwt": "^3.0.7",
+        "@types/supertest": "^2.0.12",
         "tsc-watch": "^5.0.3",
         "typescript": "^4.8.4"
     }
