Full tests again

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "start": "node dist/index.js",
-        "test": "jest --coverage",
+        "test": "jest",
         "test:unit": "ENV_FILE=./config/.env.test jest",
         "dev": "tsc-watch --onSuccess \"node dist/index.js\" ",
         "build": "tsc"
